syntax = "proto3"; //proto 문법 버전 정의

package com.example.demo.batch;
option java_package = "com.example.demo.batch"; //java 패키지를 명시적으로 지정

service BatchJobService{
  rpc GetBatchResults (GetBatchResultsRequest) returns (GetBatchResultsResponse);
}

message GetBatchResultsRequest {
  string job_name = 1;
  int64 page = 2;
  int64 size = 3;
}

message GetBatchResultsResponse {
  repeated JobInstance job_instances = 1;
}

message JobInstance {
  string job_instance_description = 1;
  repeated JobExecution job_executions = 2;
}

message JobExecution {
  string job_execution_description = 1;
  repeated string step_execution_description = 2;
}